--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -30,15 +30,15 @@ bind "scancode38"     say "Glasses enhanse my gameplay and zoom in when i H$ you
 bind "scancode39"     say "When you are on ground having boring i an in my golden jet with my bands" // [0] 
 bind "scancode45"     say "I am sad to the touch butt my mind is fureyous like a tyger. you dont mess with the bo$$ of the world" // [-] 
 bind "scancode47"     say "Single blk man looking for a single female who need or looking for stability in there life. Must be willing to be a live in female without the drama. Must be drug free, honest, caring." // ([) 
-bind "scancode48"     say "say she want a baby while she mastering my yoda" // (]) 
+bind "scancode48"     say "ⓢⓐⓨ ⓢⓗⓔ ⓦⓐⓝⓣ ⓐ ⓑⓐⓑⓨ ⓦⓗⓘⓛⓔ ⓢⓗⓔ ⓜⓐⓢⓣⓔⓡⓘⓝⓖ ⓜⓨ ⓨⓞⓓⓐ" // (]) 
 bind "scancode56"     say "Other pepol are shooting aer. But me HS you. now all family disrespect but it fine because the world what it is!" // [/] 
-bind "scancode51"     say "EXCELLENT AROMA::+200 BROWNIE POINTS" // [;] 
+bind "scancode51"     say "🅴🆇🅲🅴🅻🅻🅴🅽🆃 🅰🆁🅾🅼🅰::+200 🅱🆁🅾🆆🅽🅸🅴 🅿🅾🅸🅽🆃🆂" // [;] 
 bind "scancode52"     say "Blood pores from top of DE_MIRAGE but police wonrder who blood is? it you blood i explode you with shootgun" // ['] 
 bind "scancode49"     say "Counter terrorst win ? true here beavuse you country is terrorist but my counrty is rich and you live slums" // [\] 
 bind "scancode6"      say "Midle east need to learn bomb defusual tacktiks for counter terrosits and all countryes bow down to me lebanon king" // [c] 
 bind "scancode9"      say "Nifed you like i peeky blinders, you die like mohammed back in the days when you younger bot" // [f] 
 bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family (DOG)" // [z] 
-bind "scancode54"     say "SWEET BABY MOTHER OF TYRONE" // [,] 
+bind "scancode54"     say "$$ 𝕊𝕎𝔼𝔼𝕋 𝔹𝔸𝔹𝕐 𝕄𝕆𝕋ℍ𝔼ℝ 𝕆𝔽 𝕋𝕐ℝ𝕆ℕ𝔼 || ƎNOᴚ⅄⊥ ℲO ᴚƎH⊥OW ⅄ᙠ∀ᙠ ⊥ƎƎMS $$" // [,] 
 bind "scancode55"     say "CHINESE BACKWOOD HACK 英雄联盟 SECRET BLUNT TECHNIQUE 英雄联盟英雄联盟 ANCIENT KUSH KNOWLEDGE 英雄联盟 40 BLUNTS ROLLED IN 20 SECONDS" // [.] 
 bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v] 
 bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor." // [n] 
