--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -23,13 +23,13 @@ bind "scancode31"     "slot2"                                   // [2] Equip: Se
 bind "scancode32"     "slot3"                                   // [3] Equip: Knife, Zeus or Hands (dangerzone).
 bind "scancode33"     "slot4"                                   // [4] Equip: Grenades [cycle] (same as 'invnextgrenade').
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
-bind "scancode35"     say "Her body is broad and powerful, built for endurance rather than elegance, with thick thighs, strong arms, and a wide back capable of bearing weight." // [6] 
+bind "scancode35"     say "ᕼEᖇ ᗷOᗪY Iᔕ ᗷᖇOᗩᗪ ᗩᑎᗪ ᑭOᗯEᖇᖴᑌᒪ, ᗷᑌIᒪT ᖴOᖇ EᑎᗪᑌᖇᗩᑎᑕE ᖇᗩTᕼEᖇ Tᕼᗩᑎ EᒪEGᗩᑎᑕE, ᗯITᕼ TᕼIᑕK TᕼIGᕼᔕ, ᔕTᖇOᑎG ᗩᖇᗰᔕ, ᗩᑎᗪ ᗩ ᗯIᗪE ᗷᗩᑕK ᑕᗩᑭᗩᗷᒪE Oᖴ ᗷEᗩᖇIᑎG ᗯEIGᕼT." // [6] 
 bind "scancode36"     say "⟁FäÞHr ⟁ MöðhÄr ⟁ SïßLïnðs ⟁ PäK ⟁ TrïBä ⟁ K'LäN ⟁ LÖÝälTï ⟁ ÐëTërMïnäTïÖn ⟁ ŖëĞälïTÿ ⟁ ÕßšëŖvånĆë ⟁ HÕnõŖ ⟁ WïŠðom⟁ ÐRAKä" // [7] 
 bind "scancode37"     say "you are a dmb retad you belong on your knees for daddy not playing a high iq game like cs2" // [8]  
 bind "scancode38"     say "Glasses enhanse my gameplay and zoom in when i H$ you in HD and get easy win for my family" // [9] 
 bind "scancode39"     say "When you are on ground having boring i an in my golden jet with my bands" // [0] 
 bind "scancode45"     say "I am sad to the touch butt my mind is fureyous like a tyger. you dont mess with the bo$$ of the world" // [-] 
-bind "scancode47"     say "Single blk man looking for a single female who need or looking for stability in there life. Must be willing to be a live in female without the drama. Must be drug free, honest, caring." // ([) 
+bind "scancode47"     say "ₛᵢₙgₗₑ bₗₖ ₘₐₙ ₗₒₒₖᵢₙg fₒᵣ ₐ ₛᵢₙgₗₑ fₑₘₐₗₑ wₕₒ ₙₑₑd ₒᵣ ₗₒₒₖᵢₙg fₒᵣ ₛₜₐbᵢₗᵢₜy ᵢₙ ₜₕₑᵣₑ ₗᵢfₑ. ₘᵤₛₜ bₑ wᵢₗₗᵢₙg ₜₒ bₑ ₐ ₗᵢᵥₑ ᵢₙ fₑₘₐₗₑ wᵢₜₕₒᵤₜ ₜₕₑ dᵣₐₘₐ. ₘᵤₛₜ bₑ dᵣᵤg fᵣₑₑ, ₕₒₙₑₛₜ, cₐᵣᵢₙg." // ([) 
 bind "scancode48"     say "ⓢⓐⓨ ⓢⓗⓔ ⓦⓐⓝⓣ ⓐ ⓑⓐⓑⓨ ⓦⓗⓘⓛⓔ ⓢⓗⓔ ⓜⓐⓢⓣⓔⓡⓘⓝⓖ ⓜⓨ ⓨⓞⓓⓐ" // (]) 
 bind "scancode56"     say "Other pepol are shooting aer. But me HS you. now all family disrespect but it fine because the world what it is!" // [/] 
 bind "scancode51"     say "🅴🆇🅲🅴🅻🅻🅴🅽🆃 🅰🆁🅾🅼🅰::+200 🅱🆁🅾🆆🅽🅸🅴 🅿🅾🅸🅽🆃🆂" // [;] 
@@ -39,18 +39,18 @@ bind "scancode6"      say "Midle east need to learn bomb defusual tacktiks for c
 bind "scancode9"      say "Nifed you like i peeky blinders, you die like mohammed back in the days when you younger bot" // [f] 
 bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family (DOG)" // [z] 
 bind "scancode54"     say "$$ 𝕊𝕎𝔼𝔼𝕋 𝔹𝔸𝔹𝕐 𝕄𝕆𝕋ℍ𝔼ℝ 𝕆𝔽 𝕋𝕐ℝ𝕆ℕ𝔼 || ƎNOᴚ⅄⊥ ℲO ᴚƎH⊥OW ⅄ᙠ∀ᙠ ⊥ƎƎMS $$" // [,] 
-bind "scancode55"     say "CHINESE BACKWOOD HACK 英雄联盟 SECRET BLUNT TECHNIQUE 英雄联盟英雄联盟 ANCIENT KUSH KNOWLEDGE 英雄联盟 40 BLUNTS ROLLED IN 20 SECONDS" // [.] 
-bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v] 
-bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor." // [n] 
+bind "scancode55"     say "Cₕᵢₙₑₛₑ BₐCₖWₒₒD ₕₐCₖ 英雄联盟 ₛₑCᵣₑₜ Bₗᵤₙₜ ₜₑCₕₙᵢQᵤₑ 英雄联盟英雄联盟 ₐₙCᵢₑₙₜ ₖᵤₛₕ ₖₙₒWₗₑDGₑ 英雄联盟 ₄₀ Bₗᵤₙₜₛ ᵣₒₗₗₑD ᵢₙ ₂₀ ₛₑCₒₙDₛ" // [.] 
+bind "scancode25"     say "Ｂｒｅａｓｔｓ ＆ Ｈｉｐｓ：ᴠᴏʟᴜᴘᴛᴜᴏᴜꜱ ɪɴ ɢᴇɴᴇʀᴀʟ..." // [v] 
+bind "scancode17"     say "ᴍʏ ᴜɴᴍᴀᴛᴄʜᴇᴅ ᴘᴇʀꜱᴘɪᴄᴀᴄɪᴛʏ ᴄᴏᴜᴘʟᴇᴅ ᴡɪᴛʜ ꜱʜᴇᴇʀ ɪɴᴅᴇꜰᴀᴛɪɢᴀʙɪʟɪᴛʏ ᴍᴀᴋᴇꜱ ᴍᴇ ᴀ ꜰᴇᴀʀᴇᴅ ᴏᴘᴘᴏɴᴇɴᴛ ɪɴ ᴀɴʏ ʀᴇᴀʟᴍ ᴏꜰ ʜᴜᴍᴀɴ ᴇɴᴅᴇᴀᴠᴏʀ." // [n] 
 bind "scancode18"     say "If you would just get up and teach them instead of handing them a friggin packet, yo. There’s kids in here that don’t learn like that. They need to learn face to face." // [o] 
-bind "scancode19"     say "You luckyer that when i hs i would nife you in backstab" // [p] 
-bind "scancode20"     say "ct sided map nigga you get youll turns" // [q] 
+bind "scancode19"     say "Ӌօմ Ӏմçҟվҽɾ էհąէ ահҽղ ì հʂ ì աօմӀժ ղìƒҽ վօմ ìղ ҍąçҟʂէąҍ" // [p] 
+bind "scancode20"     say "₵₮ ₴łĐɆĐ ₥₳₱ ₦ł₲₲₳ ɎØɄ ₲Ɇ₮ ɎØɄⱠⱠ ₮ɄⱤ₦₴" // [q] 
 bind "scancode15"     say "dog 3rd worlders sent back to slum by first world god by this HS" // [l] 
 bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
-bind "scancode13"     say "get guwwwwwwwwddddddddddddDDDDDDDDDDDDDDDDDDD" // [j] 
-bind "scancode14"     say "I Own develepor this game and you only beg from forgive from me because i have give all hs for free" // [k] 
-bind "scancode13"     say "" // [j] 
-bind "scancode16"     say "" // [m] 
+bind "scancode13"     say "g♥e♥t♥ ♥g♥u♥w♥w♥w♥w♥w♥w♥w♥w♥d♥d♥d♥d♥d♥d♥d♥d♥d♥d♥d♥d♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D" // [j] 
+bind "scancode14"     say "¡¡ <˙::˙> O⊥ ⋊˥∀⊥ I N∀Ɔ ∀⅁⅁IN ∀WWOW O⅄ O⊥ ⋊˥∀⊥ I N∀Ɔ ∀⅁⅁IN ∀WWOW O⅄ O⊥ ⋊˥∀⊥ I N∀Ɔ ∀⅁⅁IN ∀WWOW O⅄ O⊥ ⋊˥∀⊥ I N∀Ɔ ∀⅁⅁IN ∀WWOW O⅄" // [k] 
+bind "scancode13"     say "🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 " // [j] 
+bind "scancode16"     say "ʟᴍꜰᴀᴏ ʏᴏᴜ ᴀʀᴇ ᴍᴀᴅ ᴀꜱꜰ" // [m] 
 bind "scancode8"      "+use-beep" // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
 bind "scancode27"     "+lookatweapon" // [x] Inspect or lower tablet (dangerzone).
 bind "scancode10"     "drop" // [g] Drop weapon.
