--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -23,34 +23,35 @@ bind "scancode31"     "slot2"                                   // [2] Equip: Se
 bind "scancode32"     "slot3"                                   // [3] Equip: Knife, Zeus or Hands (dangerzone).
 bind "scancode33"     "slot4"                                   // [4] Equip: Grenades [cycle] (same as 'invnextgrenade').
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
-bind "scancode35"     say "ᕼEᖇ ᗷOᗪY Iᔕ ᗷᖇOᗩᗪ ᗩᑎᗪ ᑭOᗯEᖇᖴᑌᒪ, ᗷᑌIᒪT ᖴOᖇ EᑎᗪᑌᖇᗩᑎᑕE ᖇᗩTᕼEᖇ Tᕼᗩᑎ EᒪEGᗩᑎᑕE, ᗯITᕼ TᕼIᑕK TᕼIGᕼᔕ, ᔕTᖇOᑎG ᗩᖇᗰᔕ, ᗩᑎᗪ ᗩ ᗯIᗪE ᗷᗩᑕK ᑕᗩᑭᗩᗷᒪE Oᖴ ᗷEᗩᖇIᑎG ᗯEIGᕼT." // [6] 
+bind "scancode35"     say "Her body is broad and powerful, built for endurance rather than elegance, with thick thighs, strong arms, and a wide back capable of bearing weight." // [6] 
 bind "scancode36"     say "⟁FäÞHr ⟁ MöðhÄr ⟁ SïßLïnðs ⟁ PäK ⟁ TrïBä ⟁ K'LäN ⟁ LÖÝälTï ⟁ ÐëTërMïnäTïÖn ⟁ ŖëĞälïTÿ ⟁ ÕßšëŖvånĆë ⟁ HÕnõŖ ⟁ WïŠðom⟁ ÐRAKä" // [7] 
 bind "scancode37"     say "you are a dmb retad you belong on your knees for daddy not playing a high iq game like cs2" // [8]  
 bind "scancode38"     say "Glasses enhanse my gameplay and zoom in when i H$ you in HD and get easy win for my family" // [9] 
 bind "scancode39"     say "When you are on ground having boring i an in my golden jet with my bands" // [0] 
 bind "scancode45"     say "I am sad to the touch butt my mind is fureyous like a tyger. you dont mess with the bo$$ of the world" // [-] 
-bind "scancode47"     say "ₛᵢₙgₗₑ bₗₖ ₘₐₙ ₗₒₒₖᵢₙg fₒᵣ ₐ ₛᵢₙgₗₑ fₑₘₐₗₑ wₕₒ ₙₑₑd ₒᵣ ₗₒₒₖᵢₙg fₒᵣ ₛₜₐbᵢₗᵢₜy ᵢₙ ₜₕₑᵣₑ ₗᵢfₑ. ₘᵤₛₜ bₑ wᵢₗₗᵢₙg ₜₒ bₑ ₐ ₗᵢᵥₑ ᵢₙ fₑₘₐₗₑ wᵢₜₕₒᵤₜ ₜₕₑ dᵣₐₘₐ. ₘᵤₛₜ bₑ dᵣᵤg fᵣₑₑ, ₕₒₙₑₛₜ, cₐᵣᵢₙg." // ([) 
-bind "scancode48"     say "ⓢⓐⓨ ⓢⓗⓔ ⓦⓐⓝⓣ ⓐ ⓑⓐⓑⓨ ⓦⓗⓘⓛⓔ ⓢⓗⓔ ⓜⓐⓢⓣⓔⓡⓘⓝⓖ ⓜⓨ ⓨⓞⓓⓐ" // (]) 
+bind "scancode47"     say "Single blk man looking for a single female who need or looking for stability in there life. Must be willing to be a live in female without the drama. Must be drug free, honest, caring." // ([) 
+bind "scancode48"     say "say she want a baby while she mastering my yoda" // (]) 
 bind "scancode56"     say "Other pepol are shooting aer. But me HS you. now all family disrespect but it fine because the world what it is!" // [/] 
-bind "scancode51"     say "🅴🆇🅲🅴🅻🅻🅴🅽🆃 🅰🆁🅾🅼🅰::+200 🅱🆁🅾🆆🅽🅸🅴 🅿🅾🅸🅽🆃🆂" // [;] 
+bind "scancode51"     say "EXCELLENT AROMA::+200 BROWNIE POINTS" // [;] 
 bind "scancode52"     say "Blood pores from top of DE_MIRAGE but police wonrder who blood is? it you blood i explode you with shootgun" // ['] 
 bind "scancode49"     say "Counter terrorst win ? true here beavuse you country is terrorist but my counrty is rich and you live slums" // [\] 
 bind "scancode6"      say "Midle east need to learn bomb defusual tacktiks for counter terrosits and all countryes bow down to me lebanon king" // [c] 
 bind "scancode9"      say "Nifed you like i peeky blinders, you die like mohammed back in the days when you younger bot" // [f] 
 bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family (DOG)" // [z] 
-bind "scancode54"     say "$$ 𝕊𝕎𝔼𝔼𝕋 𝔹𝔸𝔹𝕐 𝕄𝕆𝕋ℍ𝔼ℝ 𝕆𝔽 𝕋𝕐ℝ𝕆ℕ𝔼 || ƎNOᴚ⅄⊥ ℲO ᴚƎH⊥OW ⅄ᙠ∀ᙠ ⊥ƎƎMS $$" // [,] 
-bind "scancode55"     say "Cₕᵢₙₑₛₑ BₐCₖWₒₒD ₕₐCₖ 英雄联盟 ₛₑCᵣₑₜ Bₗᵤₙₜ ₜₑCₕₙᵢQᵤₑ 英雄联盟英雄联盟 ₐₙCᵢₑₙₜ ₖᵤₛₕ ₖₙₒWₗₑDGₑ 英雄联盟 ₄₀ Bₗᵤₙₜₛ ᵣₒₗₗₑD ᵢₙ ₂₀ ₛₑCₒₙDₛ" // [.] 
-bind "scancode25"     say "Ｂｒｅａｓｔｓ ＆ Ｈｉｐｓ：ᴠᴏʟᴜᴘᴛᴜᴏᴜꜱ ɪɴ ɢᴇɴᴇʀᴀʟ..." // [v] 
-bind "scancode17"     say "ᴍʏ ᴜɴᴍᴀᴛᴄʜᴇᴅ ᴘᴇʀꜱᴘɪᴄᴀᴄɪᴛʏ ᴄᴏᴜᴘʟᴇᴅ ᴡɪᴛʜ ꜱʜᴇᴇʀ ɪɴᴅᴇꜰᴀᴛɪɢᴀʙɪʟɪᴛʏ ᴍᴀᴋᴇꜱ ᴍᴇ ᴀ ꜰᴇᴀʀᴇᴅ ᴏᴘᴘᴏɴᴇɴᴛ ɪɴ ᴀɴʏ ʀᴇᴀʟᴍ ᴏꜰ ʜᴜᴍᴀɴ ᴇɴᴅᴇᴀᴠᴏʀ." // [n] 
+bind "scancode54"     say "SWEET BABY MOTHER OF TYRONE" // [,] 
+bind "scancode55"     say "CHINESE BACKWOOD HACK 英雄联盟 SECRET BLUNT TECHNIQUE 英雄联盟英雄联盟 ANCIENT KUSH KNOWLEDGE 英雄联盟 40 BLUNTS ROLLED IN 20 SECONDS" // [.] 
+bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v] 
+bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor." // [n] 
 bind "scancode18"     say "If you would just get up and teach them instead of handing them a friggin packet, yo. There’s kids in here that don’t learn like that. They need to learn face to face." // [o] 
-bind "scancode19"     say "Ӌօմ Ӏմçҟվҽɾ էհąէ ահҽղ ì հʂ ì աօմӀժ ղìƒҽ վօմ ìղ ҍąçҟʂէąҍ" // [p] 
-bind "scancode20"     say "₵₮ ₴łĐɆĐ ₥₳₱ ₦ł₲₲₳ ɎØɄ ₲Ɇ₮ ɎØɄⱠⱠ ₮ɄⱤ₦₴" // [q] 
+bind "scancode19"     say "You luckyer that when i hs i would nife you in backstab" // [p] 
+bind "scancode20"     say "Let you parents know you dye after this loze" // [q] 
+bind "scancode20"     say "ct sided map nigga you get youll turns" // [q] 
 bind "scancode15"     say "dog 3rd worlders sent back to slum by first world god by this HS" // [l] 
 bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
-bind "scancode13"     say "g♥e♥t♥ ♥g♥u♥w♥w♥w♥w♥w♥w♥w♥w♥d♥d♥d♥d♥d♥d♥d♥d♥d♥d♥d♥d♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D♥D" // [j] 
-bind "scancode14"     say "¡¡ <˙::˙> O⊥ ⋊˥∀⊥ I N∀Ɔ ∀⅁⅁IN ∀WWOW O⅄ O⊥ ⋊˥∀⊥ I N∀Ɔ ∀⅁⅁IN ∀WWOW O⅄ O⊥ ⋊˥∀⊥ I N∀Ɔ ∀⅁⅁IN ∀WWOW O⅄ O⊥ ⋊˥∀⊥ I N∀Ɔ ∀⅁⅁IN ∀WWOW O⅄" // [k] 
-bind "scancode13"     say "🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 🄼🄰🄳 " // [j] 
-bind "scancode16"     say "ʟᴍꜰᴀᴏ ʏᴏᴜ ᴀʀᴇ ᴍᴀᴅ ᴀꜱꜰ" // [m] 
+bind "scancode13"     say "get guwwwwwwwwddddddddddddDDDDDDDDDDDDDDDDDDD" // [j] 
+bind "scancode14"     say "I Own develepor this game and you only beg from forgive from me because i have give all hs for free" // [k] 
+bind "scancode13"     say "" // [j] 
+bind "scancode16"     say "" // [m] 
 bind "scancode8"      "+use-beep" // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
 bind "scancode27"     "+lookatweapon" // [x] Inspect or lower tablet (dangerzone).
 bind "scancode10"     "drop" // [g] Drop weapon.
@@ -69,177 +70,3 @@ bind "scancode225"    "+sprint" // [shift] Walk (slow; no sound).
 bind "scancode44"     "+jump" // [space] Jump <hold for a high jump with ExoJump Boots> (dangerzone).
 bind "scancode226"    "+duck" // [alt] Duck/Crouch
 bind "mouse_x"        "yaw" // Controls the mouse screen movement on vertical axis.
-bind "mouse_y"        "pitch" // Controls the mouse screen movement on horizontal axis.
-bind "x_axis"         "rightleft" // Controls the screen movement on axis X.
-bind "y_axis"         "!forwardback" // Controls the screen movement on axis Y.
-bind "u_axis"         "yaw" // Controls the screen movement on vertical axis.
-bind "r_axis"         "pitch" // Controls the screen movement on horizontal axis.
-
-// Cursor control keys.
-bind "scancode82"     "+forward" // [uparrow] Forward.
-bind "scancode81"     "+back" // [downarrow] Back.
-bind "scancode80"     "+turnleft" // [leftarrow] Rotate to left (counter-clockwise).
-bind "scancode79"     "+turnright" // [rightarrow] Rotate to right (clockwise).
-
-// Comms and UI
-bind "scancode24"     "messagemode2" // [y] Team message (chat only with the team).
-bind "scancode28"     "messagemode" // [u] Message to all (chat with all).
-bind "scancode5"      "buymenu" // [b] Buy menu/Tablet delivery (dangerzone)
-bind "scancode53"     "toggleconsole" // [`] Open the developer console.
-bind "scancode41"     "cancelselect" // [esc] Open/close the game menu.
-bind "scancode43"     "+scores-fps" // [tab] Scoreboard and fps <hold to show> (dangerzone).
-bind "scancode76"     "sellbackall" // [del] Refund all
-bind "mouse3"         "player_ping" // Ping
-bind "mouse4"         "+voicerecord" // Voice <push to talk; only with teammates in matchmaking>. 
-
-// Unbound.
-bind "scancode74"     "" // [home] 
-bind "scancode77"     "" // [end] 
-bind "scancode75"     "" // [pgup] 
-bind "scancode78"     "" // [pgdn] 
-bind "scancode71"     "" // [sclk] 
-bind "scancode72"     "" // [pause] 
-bind "scancode57"     "" // [capslock] 
-bind "scancode229"    "" // [rshift]
-bind "scancode224"    "" // [ctrl] 
-bind "scancode228"    "" // [rctrl] 
-bind "scancode40"     "" // [enter] 
-bind "scancode42"     "" // [backspace] 
-bind "scancode73"     "" // [ins] 
-bind "scancode230"    "" // [ralt] 
-bind "scancode46"     "" // [backspace] 
-bind "scancode58"     "" // [f1] 
-bind "scancode59"     "" // [f2] 
-bind "scancode60"     "" // [f3] 
-bind "scancode61"     "" // [f4] 
-bind "scancode62"     "" // [f5] 
-bind "scancode63"     "" // [f6] 
-bind "scancode64"     "" // [f7] 
-bind "scancode65"     "" // [f8] 
-bind "scancode66"     "" // [f9] 
-bind "scancode67"     "" // [f10] 
-bind "scancode68"     "" // [f11] 
-bind "scancode69"     "" // [f12] 
-bind "mwheelup"       "" // 
-bind "mwheeldown"     "" // 
-bind "mouse5"         "" // 
-
-// Numeric keypad keys.
-//
-// <> Items aliases:
-// Pistols: glock, hkp2000, usp_silencer, elite, p250, tec9, fn57, deagle { (I) CZ75-Auto -> 'tec9', 'fn57'; (II) R8 Revolver -> 'deagle' }
-// Rifles: galilar, famas, ak47, m4a1, m4a1_silencer, ssg08, aug, sg556, awp, scar20, g3sg1 { (I) M4A4, M4A1-S, AK-47 -> 'm4a1', 'm4a1_silencer', 'ak47' }
-// Heavies: nova, xm1014, mag7, m249, negev { (I) Sawed-Off -> 'mag7' }
-// SMGs: mac10, mp9, mp7, ump45, p90, bizon { (I) MP5-SD -> 'mp7' }
-// Equipment: vest, vesthelm, taser, defuser, heavyarmor
-// Grenades: molotov, incgrenade, decoy, flashbang, hegrenade, smokegrenade, tagrenade
-//
-// <> Default loadout list (up-bottom order):
-// Equipment: vest, vesthelm, taser, defuser
-// Pistols: hpk2000/usp_silencer/glock, elite, p250, fn57/tec9, deagle
-// Mid-Tier: nova, xm1041, mp5sd, p90, mp9/mac10
-// Rifles: famag/galilar, m4a1/m4a1_silencer/ak47, ssg08, aug/sg556, awp
-// Grenades: flashbang, smokegrenade, hegrenade, incgrenade, decoy
-//
-// <i> An item which has a different name in the other team, can be bought via the other team-side alias.
-// <i> After buying the items, the knife will be automatically equipped for an easier spawn run.
-bind "scancode83"     "" // [numlock] -
-bind "scancode84"     "buy hegrenade; slot3" // [/] Buy: High Explosive Grenade.
-bind "scancode85"     "buy flashbang; slot3" // [*] Buy: Flashbang.
-bind "scancode86"     "buy smokegrenade; slot3" // [-] Buy: Smoke Grenade.
-bind "scancode87"     "buy incgrenade; slot3" // [+] Buy: Incendiary Grenade/Molotov.
-bind "scancode88"     "buy defuser; slot3" // [enter] Buy: Defuse Kit.
-bind "scancode99"     "buy vest; slot3" // [.] Buy: Kevlar Vest.
-bind "scancode98"     "buy vesthelm; slot3" // [0] Buy: Kevlar Vest + Helmet.
-bind "scancode89"     "buy secondary1; slot3" // [1] Buy: Pistol 2 (starting from 'Other pistols' category).
-bind "scancode90"     "buy secondary2; slot3" // [2] Buy: Pistol 3.
-bind "scancode91"     "buy secondary3; slot3" // [3] Buy: Pistol 4.
-bind "scancode92"     "buy midtier0; slot3" // [4] Buy: Mid-Tier 1.
-bind "scancode93"     "buy midtier1; slot3" // [5] Buy: Mid-Tier 2.
-bind "scancode94"     "buy midtier2; slot3" // [6] Buy: Mid-Tier 3.
-bind "scancode95"     "buy rifle0; slot3" // [7] Buy: Rifle 1.
-bind "scancode96"     "buy rifle1; slot3" // [8] Buy: Rifle 2.
-bind "scancode97"     "buy rifle2; slot3" // [9] Buy: Rifle 3.
-
-// Radial radio.
-cl_radial_radio_tab_0_text_1 "#Chatwheel_midplan"              // Ping middle.
-cl_radial_radio_tab_0_text_2 "#Chatwheel_bplan"                // Ping site B.
-cl_radial_radio_tab_0_text_3 "#Chatwheel_oneenemyhere"         // Ping 'one enemy' spoted.
-cl_radial_radio_tab_0_text_4 "#Chatwheel_requestplan"          // Ask the game plan.
-cl_radial_radio_tab_0_text_5 "#Chatwheel_requestweapon"        // Request weapon.
-cl_radial_radio_tab_0_text_6 "#Chatwheel_rotatetome"           // Call the teammates rotation.
-cl_radial_radio_tab_0_text_7 "#Chatwheel_heardnoise"           // Call a noise.
-cl_radial_radio_tab_0_text_8 "#Chatwheel_aplan"                // Ping site A.
-
-// Prevent buy wheel from purchasing via number keys.
-// Default: 0
-cl_buywheel_nonumberpurchasing "1"
-
-// Zoom button hold.
-// Default: 1
-//
-// >> Holding the zoom button should behave as if it was pressed repetedly.
-//
-// <> Values:
-// 0: Repetitive zoom.
-// 1: One click.
-cl_debounce_zoom "0"
-
-// Detach silencer on supported weapons.
-// Default: 0
-//
-// >> Removal of silencers on the M4A1-S and USP-S.
-//
-// <> Values:
-// 0: Cannot detach.
-// 1: Press secondary fire to detach.
-cl_silencer_mode "0"
-
-// Pressing the +use key will open the buy menu if in a buy zone (just as if the 'buy' key is pressed).
-// Default: 1
-cl_use_opens_buy_menu "0"
-
-// The type of binding which enables mouse selection in the scoreboard.
-// Default: +attack2
-cl_scoreboard_mouse_enable_binding "+attack2"
-
-// Set the key to use for donation in the buy menu.
-// Default: 0
-//
-// <> Values:
-// 0: Left Control.
-// 1: Left Alt.
-// 2: Left Shift.
-cl_buywheel_donate_key "0"
-
-// Duck toggle.
-// Default: 0
-//
-// <> Values:
-// 0: Hold to duck.
-// 1: Press to toggle duck.
-option_duck_method "0"
-
-// Walk toggle.
-// Default: 1
-//
-// <> Values:
-// 0: Hold to walk.
-// 1: Press to toggle walk.
-option_speed_method "0"
-
-// Auto-deploy parachute if fall speed exceeds lethal limit.
-// Default: 1
-cl_parachute_autodeploy "1"
-
-// When tapping the radial radio button, leave a ping if nothing is selected within the time in seconds set in 'cl_radial_menu_tap_duration'.
-// Default: 1
-cl_radial_radio_tap_to_ping "1"
-
-// Joystick game engine controller support.
-// Default: 0
-joystick "0"
-
-// Joystick input recognition within the game.
-// Default: 0
-cl_joystick_enabled "0"
