--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -23,28 +23,28 @@ bind "scancode31"     "slot2"                                   // [2] Equip: Se
 bind "scancode32"     "slot3"                                   // [3] Equip: Knife, Zeus or Hands (dangerzone).
 bind "scancode33"     "slot4"                                   // [4] Equip: Grenades [cycle] (same as 'invnextgrenade').
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
-bind "scancode35"     say "Her body is broad and powerful, built for endurance rather than elegance, with thick thighs, strong arms, and a wide back capable of bearing weight." // [6] 
-bind "scancode36"     say "⟁FäÞHr ⟁ MöðhÄr ⟁ SïßLïnðs ⟁ PäK ⟁ TrïBä ⟁ K'LäN ⟁ LÖÝälTï ⟁ ÐëTërMïnäTïÖn ⟁ ŖëĞälïTÿ ⟁ ÕßšëŖvånĆë ⟁ HÕnõŖ ⟁ WïŠðom⟁ ÐRAKä" // [7] 
-bind "scancode37"     say "you are a dmb retad you belong on your knees for daddy not playing a high iq game like cs2" // [8]  
-bind "scancode38"     say "Glasses enhanse my gameplay and zoom in when i H$ you in HD and get easy win for my family" // [9] 
-bind "scancode39"     say "When you are on ground having boring i an in my golden jet with my bands" // [0] 
-bind "scancode45"     say "I am sad to the touch butt my mind is fureyous like a tyger. you dont mess with the bo$$ of the world" // [-] 
+bind "scancode35"     say "ⱧɆⱤ ฿ØĐɎ ł₴ ฿ⱤØ₳Đ ₳₦Đ ₱Ø₩ɆⱤ₣ɄⱠ, ฿ɄłⱠ₮ ₣ØⱤ Ɇ₦ĐɄⱤ₳₦₵Ɇ Ɽ₳₮ⱧɆⱤ ₮Ⱨ₳₦ ɆⱠɆ₲₳₦₵Ɇ, ₩ł₮Ⱨ ₮Ⱨł₵₭ ₮Ⱨł₲Ⱨ₴, ₴₮ⱤØ₦₲ ₳Ɽ₥₴, ₳₦Đ ₳ ₩łĐɆ ฿₳₵₭ ₵₳₱₳฿ⱠɆ Ø₣ ฿Ɇ₳Ɽł₦₲ ₩Ɇł₲Ⱨ₮." // [6] 
+bind "scancode36"     say "⟁ᖴäÞᕼᖇ ⟁ ᘻöðᕼÄᖇ ⟁ SïßᒪïᘉðS ⟁ ᕵäᖽᐸ ⟁ ᖶᖇïᗷä ⟁ ᖽᐸ'ᒪäᘉ ⟁ ᒪÖÝäᒪᖶï ⟁ ÐëᖶëᖇᘻïᘉäᖶïÖᘉ ⟁ ŖëĞäᒪïᖶÿ ⟁ ÕßšëŖᐺåᘉĆë ⟁ ᕼÕᘉõŖ ⟁ ᘺïŠðᓍᘻ⟁ Ðᖇᗩᖽᐸä" // [7] 
+bind "scancode37"     say "ᄅ Ǝ⋊Iᴚ⊥S ᴚƎ⊥N∩Oɔ ǝʞıl ǝɯɐɓ bı ɥɓıɥ ɐ ɓuıʎɐld ʇou ʎppɐp ɹoɟ sǝǝuʞ ɹnoʎ uo ɓuolǝq noʎ pɐʇǝɹ qɯp ɐ ǝɹɐ noʎ" // [8]  
+bind "scancode38"     say "ɢʟǟֆֆɛֆ ɛռɦǟռֆɛ ʍʏ ɢǟʍɛքʟǟʏ ǟռɖ ʐօօʍ ɨռ աɦɛռ ɨ ɦ$ ʏօʊ ɨռ ɦɖ ǟռɖ ɢɛȶ ɛǟֆʏ աɨռ ʄօʀ ʍʏ ʄǟʍɨʟʏ" // [9] 
+bind "scancode39"     say "𝙒𝙝𝙚𝙣 𝙮𝙤𝙪 𝙖𝙧𝙚 𝙤𝙣 𝙜𝙧𝙤𝙪𝙣𝙙 𝙝𝙖𝙫𝙞𝙣𝙜 𝙗𝙤𝙧𝙞𝙣𝙜 𝙞 𝙖𝙣 𝙞𝙣 𝙢𝙮 𝙜𝙤𝙡𝙙𝙚𝙣 𝙟𝙚𝙩 𝙬𝙞𝙩𝙝 𝙢𝙮 𝙗𝙖𝙣𝙙𝙨" // [0] 
+bind "scancode45"     say "𝐈 𝐚𝐦 𝐬𝐚𝐝 𝐭𝐨 𝐭𝐡𝐞 𝐭𝐨𝐮𝐜𝐡 𝐛𝐮𝐭𝐭 𝐦𝐲 𝐦𝐢𝐧𝐝 𝐢𝐬 𝐟𝐮𝐫𝐞𝐲𝐨𝐮𝐬 𝐥𝐢𝐤𝐞 𝐚 𝐭𝐲𝐠𝐞𝐫. 𝐲𝐨𝐮 𝐝𝐨𝐧𝐭 𝐦𝐞𝐬𝐬 𝐰𝐢𝐭𝐡 𝐭𝐡𝐞 𝐛𝐨$$ 𝐨𝐟 𝐭𝐡𝐞 𝐰𝐨𝐫𝐥𝐝" // [-] 
 bind "scancode47"     say "Single blk man looking for a single female who need or looking for stability in there life. Must be willing to be a live in female without the drama. Must be drug free, honest, caring." // ([) 
 bind "scancode48"     say "say she want a baby while she mastering my yoda" // (]) 
-bind "scancode56"     say "Other pepol are shooting aer. But me HS you. now all family disrespect but it fine because the world what it is!" // [/] 
-bind "scancode51"     say "EXCELLENT AROMA::+200 BROWNIE POINTS" // [;] 
-bind "scancode52"     say "Blood pores from top of DE_MIRAGE but police wonrder who blood is? it you blood i explode you with shootgun" // ['] 
-bind "scancode49"     say "Counter terrorst win ? true here beavuse you country is terrorist but my counrty is rich and you live slums" // [\] 
-bind "scancode6"      say "Midle east need to learn bomb defusual tacktiks for counter terrosits and all countryes bow down to me lebanon king" // [c] 
-bind "scancode9"      say "Nifed you like i peeky blinders, you die like mohammed back in the days when you younger bot" // [f] 
-bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family (DOG)" // [z] 
-bind "scancode54"     say "SWEET BABY MOTHER OF TYRONE" // [,] 
+bind "scancode56"     say "ӨƬΉΣЯ PΣPӨᄂ ΛЯΣ ƧΉӨӨƬIПG ΛΣЯ. BЦƬ MΣ ΉƧ YӨЦ. ПӨЩ Λᄂᄂ FΛMIᄂY DIƧЯΣƧPΣᄃƬ BЦƬ IƬ FIПΣ BΣᄃΛЦƧΣ ƬΉΣ ЩӨЯᄂD ЩΉΛƬ IƬ IƧ!" // [/] 
+bind "scancode51"     say "【﻿ＥＸＣＥＬＬＥＮＴ　ＡＲＯＭＡ：：＋２００　ＢＲＯＷＮＩＥ　ＰＯＩＮＴＳ】" // [;] 
+bind "scancode52"     say "🌷💣  ｂ𝕝𝓸𝓸ｄ 𝐏𝓞Ř𝐞ᔕ 𝒻ᖇ𝑜𝐌 т𝕆𝓹 𝓞Ŧ ｄᗴ_Μ𝕚𝓻𝕒g𝔢 乃𝓾𝔱 𝔭ᗝㄥｉᑕє ｗⓄήŘ𝓓𝒆ℝ 𝔴Ħ𝐎 ᗷlᵒό∂ 丨𝔰? 𝒾t ㄚỖｕ 𝐛𝔩𝐎𝕠ᗪ ί є𝓍ρⓁ𝐨ⓓⒺ 𝔶Ⓞ𝓤 𝓌𝕀ᵗⒽ 𝔰𝔥Ｏ𝕆𝕥Ğ𝓊𝔫  🐟💘" // ['] 
+bind "scancode49"     say "ᴄᴏᴜɴᴛᴇʀ ᴛᴇʀʀᴏʀꜱᴛ ᴡɪɴ ? ᴛʀᴜᴇ ʜᴇʀᴇ ʙᴇᴀᴠᴜꜱᴇ ʏᴏᴜ ᴄᴏᴜɴᴛʀʏ ɪꜱ ᴛᴇʀʀᴏʀɪꜱᴛ ʙᴜᴛ ᴍʏ ᴄᴏᴜɴʀᴛʏ ɪꜱ ʀɪᴄʜ ᴀɴᴅ ʏᴏᴜ ʟɪᴠᴇ ꜱʟᴜᴍꜱ" // [\] 
+bind "scancode6"      say "ᴹⁱᵈˡᵉ ᵉᵃˢᵗ ⁿᵉᵉᵈ ᵗᵒ ˡᵉᵃʳⁿ ᵇᵒᵐᵇ ᵈᵉᶠᵘˢᵘᵃˡ ᵗᵃᶜᵏᵗⁱᵏˢ ᶠᵒʳ ᶜᵒᵘⁿᵗᵉʳ ᵗᵉʳʳᵒˢⁱᵗˢ ᵃⁿᵈ ᵃˡˡ ᶜᵒᵘⁿᵗʳʸᵉˢ ᵇᵒʷ ᵈᵒʷⁿ ᵗᵒ ᵐᵉ ˡᵉᵇᵃⁿᵒⁿ ᵏⁱⁿᵍ" // [c] 
+bind "scancode9"      say "ŋıʄɛɖ ყơų Ɩıƙɛ ı ℘ɛɛƙყ ცƖıŋɖɛཞʂ, ყơų ɖıɛ Ɩıƙɛ ɱơɧąɱɱɛɖ ცąƈƙ ıŋ ɬɧɛ ɖąყʂ ῳɧɛŋ ყơų ყơųŋɠɛཞ ცơɬ" // [f] 
+bind "scancode29"     say "աɦɛռ ɨ աǟʟӄ ʊք ʟǟɖɖɛʀ ʏօʊ ʟօօӄ աɨȶɦ ʀɨʄɛʟ. ɨ ֆɦօօȶ ɮɛʄօʀ ǟռɖ ֆռɨքɛʀ ʏօʊ. ʏօʊ ǟʀɛ ռօա օռ ɢʀօʊռɖ աɨȶɦ ʄǟʍɨʟʏ (ɖօɢ)" // [z] 
+bind "scancode54"     say "ѕωєєт вαву мσтнєя σƒ туяσηє" // [,] 
 bind "scancode55"     say "CHINESE BACKWOOD HACK 英雄联盟 SECRET BLUNT TECHNIQUE 英雄联盟英雄联盟 ANCIENT KUSH KNOWLEDGE 英雄联盟 40 BLUNTS ROLLED IN 20 SECONDS" // [.] 
 bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v] 
 bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor." // [n] 
 bind "scancode18"     say "If you would just get up and teach them instead of handing them a friggin packet, yo. There’s kids in here that don’t learn like that. They need to learn face to face." // [o] 
 bind "scancode19"     say "You luckyer that when i hs i would nife you in backstab" // [p] 
-bind "scancode20"     say "Let you parents know you dye after this loze" // [q] 
+bind "scancode20"     say "Lê† ¥ðµ þårêñ†§ kñðw ¥ðµ Ð¥ê å£†êr †hï§ lðzê" // [q] 
 bind "scancode20"     say "ct sided map nigga you get youll turns" // [q] 
 bind "scancode15"     say "dog 3rd worlders sent back to slum by first world god by this HS" // [l] 
 bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
