--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -24,27 +24,27 @@ bind "scancode32"     "slot3"                                   // [3] Equip: Kn
 bind "scancode33"     "slot4"                                   // [4] Equip: Grenades [cycle] (same as 'invnextgrenade').
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
 bind "scancode35"     say "ₕₑᵣ BₒDY ᵢₛ BᵣₒₐD ₐₙD ₚₒWₑᵣFᵤₗ, Bᵤᵢₗₜ Fₒᵣ ₑₙDᵤᵣₐₙCₑ ᵣₐₜₕₑᵣ ₜₕₐₙ ₑₗₑCₐₙGₑ, Wᵢₜₕ ₜₕᵢₙₖ ₜₕᵢGₕₛ, ₛₜᵣₒₙG ₐᵣₘₛ, ₐₙD ₐ WᵢDₑ BₐCₖ CₐₚₐBₗₑ ₒF BₑₐᵣᵢₙG WₑᵢGₕₜ." // [6] 
-bind "scancode36"     say "⟁ᖴÄÞᕼᖇ ⟁ ᘻÖÐᕼÄᖇ ⟁ 丂ÏSSᒪÏᘉÐ丂 ⟁ ᕵÄᖽᐸ ⟁ ᖶᖇÏᗷÄ ⟁ ᖽᐸ'ᒪÄᘉ ⟁ ᒪÖÝÄᒪᖶÏ ⟁ ÐËᖶËᖇᘻÏᘉÄᖶÏÖᘉ ⟁ ŖËĞÄᒪÏᖶŸ ⟁ ÕSSŠËŖᐺÅᘉĆË ⟁ ᕼÕᘉÕŖ ⟁ ᘺÏŠÐᓍᘻ⟁ ÐᖇᗩᖽᐸÄ" // [7] 
-bind "scancode37"     say "ᄅ Ǝ⋊Iᴚ⊥S ᴚƎ⊥N∩Oɔ ǝʞıl ǝɯɐɓ bı ɥɓıɥ ɐ ɓuıʎɐld ʇou ʎppɐp ɹoɟ sǝǝuʞ ɹnoʎ uo ɓuolǝq noʎ pɐʇǝɹ qɯp ɐ ǝɹɐ noʎ" // [8]  
-bind "scancode38"     say "ɢʟǟֆֆɛֆ ɛռɦǟռֆɛ ʍʏ ɢǟʍɛքʟǟʏ ǟռɖ ʐօօʍ ɨռ աɦɛռ ɨ ɦ$ ʏօʊ ɨռ ɦɖ ǟռɖ ɢɛȶ ɛǟֆʏ աɨռ ʄօʀ ʍʏ ʄǟʍɨʟʏ" // [9] 
-bind "scancode39"     say "𝙒𝙝𝙚𝙣 𝙮𝙤𝙪 𝙖𝙧𝙚 𝙤𝙣 𝙜𝙧𝙤𝙪𝙣𝙙 𝙝𝙖𝙫𝙞𝙣𝙜 𝙗𝙤𝙧𝙞𝙣𝙜 𝙞 𝙖𝙣 𝙞𝙣 𝙢𝙮 𝙜𝙤𝙡𝙙𝙚𝙣 𝙟𝙚𝙩 𝙬𝙞𝙩𝙝 𝙢𝙮 𝙗𝙖𝙣𝙙𝙨" // [0] 
-bind "scancode45"     say "𝐈 𝐚𝐦 𝐬𝐚𝐝 𝐭𝐨 𝐭𝐡𝐞 𝐭𝐨𝐮𝐜𝐡 𝐛𝐮𝐭𝐭 𝐦𝐲 𝐦𝐢𝐧𝐝 𝐢𝐬 𝐟𝐮𝐫𝐞𝐲𝐨𝐮𝐬 𝐥𝐢𝐤𝐞 𝐚 𝐭𝐲𝐠𝐞𝐫. 𝐲𝐨𝐮 𝐝𝐨𝐧𝐭 𝐦𝐞𝐬𝐬 𝐰𝐢𝐭𝐡 𝐭𝐡𝐞 𝐛𝐨$$ 𝐨𝐟 𝐭𝐡𝐞 𝐰𝐨𝐫𝐥𝐝" // [-] 
-bind "scancode47"     say "Single blk man looking for a single female who need or looking for stability in there life. Must be willing to be a live in female without the drama. Must be drug free, honest, caring." // ([) 
+bind "scancode36"     say "⟁ FÄTHR ⟁ MÖDHÄR ⟁ SISSLINDS ⟁ PALPH ⟁ TRIBÄ ⟁ PALAN ⟁ LÖYÄLTI ⟁ DETERMINÄTIÖN ⟁ RËGÄLITI ⟁ OSSËRVÅNCE ⟁ HONOR ⟁ WISDØM ⟁ DRALPHA ⟁" // [7] 
+bind "scancode37"     say "you r dmb u shud be on ur nees for daddy not play hig iq game like counter steirke 2" // [8]  
+bind "scancode38"     say "Glàssës enháncë my gàmeplày ànd zóóm ín whën Í hít yóu ín HD ànd gët ëásy wín fòr my fàmílý." // [9] 
+bind "scancode39"     say "𝖂𝖍𝖊𝖓 𝖞𝖔𝖚 𝖆𝖗𝖊 𝖔𝖓 𝖌𝖗𝖔𝖚𝖓𝖉 𝖍𝖆𝖛𝖎𝖓𝖌 𝖇𝖔𝖗𝖎𝖓𝖌 𝖎 𝖆𝖓 𝖎𝖓 𝖒𝖞 𝖌𝖔𝖑𝖉𝖊𝖓 𝖏𝖊𝖙 𝖜𝖎𝖙𝖍 𝖒𝖞 𝖇𝖆𝖓𝖉𝖘" // [0] 
+bind "scancode45"     say "𝘐 𝘢𝘮 𝘴𝘢𝘥 𝘵𝘰 𝘵𝘩𝘦 𝘵𝘰𝘶𝘤𝘩 𝘣𝘶𝘵𝘵 𝘮𝘺 𝘮𝘪𝘯𝘥 𝘪𝘴 𝘧𝘶𝘳𝘦𝘺𝘰𝘶𝘴 𝘭𝘪𝘬𝘦 𝘢 𝘵𝘺𝘨𝘦𝘳. 𝘺𝘰𝘶 𝘥𝘰𝘯𝘵 𝘮𝘦𝘴𝘴 𝘸𝘪𝘵𝘩 𝘵𝘩𝘦 𝘣𝘰$$ 𝘰𝘧 𝘵𝘩𝘦 𝘸𝘰𝘳𝘭𝘥" // [-] 
+bind "scancode47"     say "𝗦𝗶𝗻𝗴𝗹𝗲 𝗯𝗹𝗸 𝗺𝗮𝗻 𝗹𝗼𝗼𝗸𝗶𝗻𝗴 𝗳𝗼𝗿 𝗮 𝘀𝗶𝗻𝗴𝗹𝗲 𝗳𝗲𝗺𝗮𝗹𝗲 𝘄𝗵𝗼 𝗻𝗲𝗲𝗱 𝗼𝗿 𝗹𝗼𝗼𝗸𝗶𝗻𝗴 𝗳𝗼𝗿 𝘀𝘁𝗮𝗯𝗶𝗹𝗶𝘁𝘆 𝗶𝗻 𝘁𝗵𝗲𝗶𝗿 𝗹𝗶𝗳𝗲. 𝗠𝘂𝘀𝘁 𝗯𝗲 𝘄𝗶𝗹𝗹𝗶𝗻𝗴 𝘁𝗼 𝗯𝗲 𝗮 𝗹𝗶𝘃𝗲-𝗶𝗻 𝗳𝗲𝗺𝗮𝗹𝗲 𝘄𝗶𝘁𝗵𝗼𝘂𝘁 𝘁𝗵𝗲 𝗱𝗿𝗮𝗺𝗮. 𝗠𝘂𝘀𝘁 𝗯𝗲 𝗱𝗿𝘂𝗴 𝗳𝗿𝗲𝗲, 𝗵𝗼𝗻𝗲𝘀𝘁, 𝗰𝗮𝗿𝗶𝗻𝗴." // ([) 
 bind "scancode48"     say "say she want a baby while she mastering my yoda" // (]) 
-bind "scancode56"     say "ӨƬΉΣЯ PΣPӨᄂ ΛЯΣ ƧΉӨӨƬIПG ΛΣЯ. BЦƬ MΣ ΉƧ YӨЦ. ПӨЩ Λᄂᄂ FΛMIᄂY DIƧЯΣƧPΣᄃƬ BЦƬ IƬ FIПΣ BΣᄃΛЦƧΣ ƬΉΣ ЩӨЯᄂD ЩΉΛƬ IƬ IƧ!" // [/] 
+bind "scancode56"     say "She wants a baby while she’s mastering my Yoda." // [/] 
 bind "scancode51"     say "【﻿ＥＸＣＥＬＬＥＮＴ　ＡＲＯＭＡ：：＋２００　ＢＲＯＷＮＩＥ　ＰＯＩＮＴＳ】" // [;] 
-bind "scancode52"     say "!! ᴎuǫƚOOʜꙅ HTIW UOY ƎᗡO⅃ꟼXƎ i" // ['] 
-bind "scancode49"     say "ᴄᴏᴜɴᴛᴇʀ ᴛᴇʀʀᴏʀꜱᴛ ᴡɪɴ ? ᴛʀᴜᴇ ʜᴇʀᴇ ʙᴇᴀᴠᴜꜱᴇ ʏᴏᴜ ᴄᴏᴜɴᴛʀʏ ɪꜱ ᴛᴇʀʀᴏʀɪꜱᴛ ʙᴜᴛ ᴍʏ ᴄᴏᴜɴʀᴛʏ ɪꜱ ʀɪᴄʜ ᴀɴᴅ ʏᴏᴜ ʟɪᴠᴇ ꜱʟᴜᴍꜱ" // [\] 
-bind "scancode6"      say "ᴹⁱᵈˡᵉ ᵉᵃˢᵗ ⁿᵉᵉᵈ ᵗᵒ ˡᵉᵃʳⁿ ᵇᵒᵐᵇ ᵈᵉᶠᵘˢᵘᵃˡ ᵗᵃᶜᵏᵗⁱᵏˢ ᶠᵒʳ ᶜᵒᵘⁿᵗᵉʳ ᵗᵉʳʳᵒˢⁱᵗˢ ᵃⁿᵈ ᵃˡˡ ᶜᵒᵘⁿᵗʳʸᵉˢ ᵇᵒʷ ᵈᵒʷⁿ ᵗᵒ ᵐᵉ ˡᵉᵇᵃⁿᵒⁿ ᵏⁱⁿᵍ" // [c] 
-bind "scancode9"      say "ŋıʄɛɖ ყơų Ɩıƙɛ ı ℘ɛɛƙყ ცƖıŋɖɛཞʂ, ყơų ɖıɛ Ɩıƙɛ ɱơɧąɱɱɛɖ ცąƈƙ ıŋ ɬɧɛ ɖąყʂ ῳɧɛŋ ყơų ყơųŋɠɛཞ ცơɬ" // [f] 
+bind "scancode52"     say "She’s planning for a baby while schooling my Yoda." // ['] 
+bind "scancode49"     say "ᴄᴏᴜɴᴛᴇʀ ᴛᴇʀʀᴏʀꜱᴛ ᴡɪɴ ? ᴛʀᴜᴇ ʜᴇʀᴇ ʙᴇᴀᴜꜱᴇ ʏᴏᴜ ᴄᴏᴜɴᴛʀʏ ɪꜱ ᴛᴇʀʀᴏʀɪꜱᴛ ʙᴜᴛ ᴍʏ ᴄᴏᴜɴʀᴛʏ ɪꜱ ʀɪᴄʜ ᴀɴᴅ ʏᴏᴜ ʟɪᴠᴇ ꜱʟᴜᴍꜱ" // [\] 
+bind "scancode6"      say "𝙼ⁱ𝚍𝚕𝚎 𝚎𝚊𝚜𝚝 ⁿ𝚎𝚎𝚍 𝚝𝚘 𝚕𝚎𝚊𝚛𝚗 𝚋𝚘𝚖𝚋 𝚍𝚎𝚏𝚞𝚜𝚞𝚊𝚕 𝚝𝚊𝚌𝚔𝚝ⁱ𝚔𝚜 𝚏𝚘𝚛 𝚌𝚘𝚞𝚗𝚝𝚎𝚛 𝚝𝚎𝚛𝚛𝚘ˢⁱ𝚝ˢ 𝚊ⁿ𝚍 𝚊𝚕𝚕 𝚌𝚘𝚞𝚗𝚝𝚛𝚢𝚎𝚜 𝚋𝚘𝚠 𝚍𝚘𝚠ⁿ 𝚝𝚘 𝚖𝚎 𝚕𝚎𝚋𝚊ⁿ𝚘ⁿ 𝚔ⁱ𝚗𝚐" // [c] 
+bind "scancode9"      say "𝙣𝙞𝙛𝙚𝙙 𝙮ơ𝙪 𝙇𝙞𝙠𝙚 𝙞 𝙿𝙚𝙚𝙠𝙮 𝙗𝙡𝙞𝙣𝙙𝙚𝙧𝙨, 𝙮ơ𝙪 𝙙𝙞𝙚 𝙇𝙞𝙠𝙚 𝙢ơ𝙝ą𝙢𝙢𝙚𝙙 𝙗ą𝙘𝙠 𝙞𝙣 𝙡𝙝𝙚 𝙙ąყʂ ῳ𝙝𝙚𝙣 𝙮ơ𝙪 𝙮ơ𝙪𝙣𝙜𝙚𝙧 𝙗𝙤𝙩" // [f] 
 bind "scancode29"     say "աɦɛռ ɨ աǟʟӄ ʊք ʟǟɖɖɛʀ ʏօʊ ʟօօӄ աɨȶɦ ʀɨʄɛʟ. ɨ ֆɦօօȶ ɮɛʄօʀ ǟռɖ ֆռɨքɛʀ ʏօʊ. ʏօʊ ǟʀɛ ռօա օռ ɢʀօʊռɖ աɨȶɦ ʄǟʍɨʟʏ (ɖօɢ)" // [z] 
 bind "scancode54"     say "ѕωєєт вαву мσтнєя σƒ туяσηє" // [,] 
 bind "scancode55"     say "CHINESE BACKWOOD HACK 英雄联盟 SECRET BLUNT TECHNIQUE 英雄联盟英雄联盟 ANCIENT KUSH KNOWLEDGE 英雄联盟 40 BLUNTS ROLLED IN 20 SECONDS" // [.] 
 bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v] 
-bind "scancode17"     say "₥Ɏ Ʉ₦₥₳₮₵ⱧɆĐ ₱ɆⱤ₴₱ł₵₳₵ł₮Ɏ ₵ØɄ₱ⱠɆĐ ₩ł₮Ⱨ ₴ⱧɆɆⱤ ł₦ĐɆ₣₳₮ł₲₳฿łⱠł₮Ɏ ₥₳₭Ɇ₴ ₥Ɇ ₳ ₣Ɇ₳ⱤɆĐ Ø₱₱Ø₦Ɇ₦₮ ł₦ ₳₦Ɏ ⱤɆ₳Ⱡ₥ Ø₣ ⱧɄ₥₳₦ Ɇ₦ĐɆ₳VØⱤ." // [n] 
+bind "scancode17"     say "Brakedanceing and assplay bRAKEDANCEING AND ASSPLAY break adncing in asspay brekdacneing in ass pay" // [n] 
 bind "scancode18"     say "If you would just get up and teach them instead of handing them a friggin packet, yo. There’s kids in here that don’t learn like that. They need to learn face to face." // [o] 
 bind "scancode19"     say "ɎØɄ ⱠɄ₵₭ɎɆⱤ ₮Ⱨ₳₮ ₩ⱧɆ₦ ł Ⱨ₴ ł ₩ØɄⱠĐ ₦ł₣Ɇ ɎØɄ ł₦ ฿₳₵₭₴₮₳฿" // [p] 
-bind "scancode20"     say "Lê† ¥ðµ þårêñ†§ kñðw ¥ðµ Ð¥ê å£†êr †hï§ lðzê" // [q] 
+bind "scancode20"     say "𝗟𝗲𝘁 𝗬𝗼𝘂 𝗽𝗮𝗿𝗲𝗻𝘁𝘀 𝗸𝗻𝗼𝘄 𝗬𝗼𝘂 𝗗𝘆𝗲 𝗮𝗳𝘁𝗲𝗿 𝘁𝗵𝗶𝘀 𝗹𝗼𝘇𝗲" // [q] 
 bind "scancode20"     say "(っ◔◡◔)っ ♥ ct sided map nigga you get youll turns ♥" // [q] 
 bind "scancode15"     say "𝕕𝕠𝕘 𝟛𝕣𝕕 𝕨𝕠𝕣𝕝𝕕𝕖𝕣𝕤 𝕤𝕖𝕟𝕥 𝕓𝕒𝕔𝕜 𝕥𝕠 𝕤𝕝𝕦𝕞 𝕓𝕪 𝕗𝕚𝕣𝕤𝕥 𝕨𝕠𝕣𝕝𝕕 𝕘𝕠𝕕 𝕓𝕪 𝕥𝕙𝕚𝕤 ℍ𝕊" // [l] 
 bind "scancode12"     say "†hê ßrðw§êr hå§ ¥ðµ þå§§wðrÐ §åvê. Ì gê† ¥ðµ þå§wðrÐ †ð µ§ê ðñ å¢¢ðµñ† åñÐ måkê åll ¥ðµ lï††lê mðñê¥ †ð m¥ å¢¢ðµñ†?" // [i] 
