--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -23,7 +23,7 @@ bind "scancode31"     "slot2"                                   // [2] Equip: Se
 bind "scancode32"     "slot3"                                   // [3] Equip: Knife, Zeus or Hands (dangerzone).
 bind "scancode33"     "slot4"                                   // [4] Equip: Grenades [cycle] (same as 'invnextgrenade').
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
-bind "scancode35"     say "ₕₑᵣ BₒDY ᵢₛ BᵣₒₐD ₐₙD ₚₒWₑᵣFᵤₗ, Bᵤᵢₗₜ Fₒᵣ ₑₙDᵤᵣₐₙCₑ ᵣₐₜₕₑᵣ ₜₕₐₙ ₑₗₑCₐₙGₑ, Wᵢₜₕ ₜₕᵢₙₖ ₜₕᵢGₕₛ, ₛₜᵣₒₙG ₐᵣₘₛ, ₐₙD ₐ WᵢDₑ BₐCₖ CₐₚₐBₗₑ ₒF BₑₐᵣᵢₙG WₑᵢGₕₜ." // [6] 
+bind "scancode35"     say "𝐡𝐞𝐫 𝐁𝐨𝐃𝐘 𝐢𝐬 𝐁𝐫𝐨𝐚𝐃 𝐚𝐧𝐃 𝐩𝐨𝐖𝐞𝐫𝐅𝐮𝐥, 𝐁𝐮𝐢𝐥𝐭 𝐅𝐨𝐫 𝐞𝐧𝐃𝐮𝐫𝐚𝐧𝐂𝐞 𝐫𝐚𝐭𝐡𝐞𝐫 𝐭𝐡𝐚𝐧 𝐞𝐥𝐞𝐂𝐚𝐧𝐆𝐞, 𝐖𝐢𝐭𝐡 𝐭𝐡𝐢𝐧𝐤 𝐭𝐡𝐢𝐆𝐡𝐬, 𝐬𝐭𝐫𝐨𝐧𝐆 𝐚𝐫𝐦𝐬, 𝐚𝐧𝐃 𝐚 𝐖𝐢𝐃𝐞 𝐁𝐚𝐂𝐤 𝐂𝐚𝐩𝐚𝐛𝐥𝐞 𝐨𝐅 𝐁𝐞𝐚𝐫𝐢𝐧𝐆 𝐖𝐞𝐢𝐆𝐡𝐭." // [6] 
 bind "scancode36"     say "⟁ FÄTHR ⟁ MÖDHÄR ⟁ SISSLINDS ⟁ PALPH ⟁ TRIBÄ ⟁ PALAN ⟁ LÖYÄLTI ⟁ DETERMINÄTIÖN ⟁ RËGÄLITI ⟁ OSSËRVÅNCE ⟁ HONOR ⟁ WISDØM ⟁ DRALPHA ⟁" // [7] 
 bind "scancode37"     say "you r dmb u shud be on ur nees for daddy not play hig iq game like counter steirke 2" // [8]  
 bind "scancode38"     say "Glàssës enháncë my gàmeplày ànd zóóm ín whën Í hít yóu ín HD ànd gët ëásy wín fòr my fàmílý." // [9] 
