--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -1,4 +1,4 @@
-a// Remove all existing binds.
+// Remove all existing binds.
 unbindall
 
 // Updates game keyboard layout to the current Windows keyboard setting.
@@ -23,35 +23,34 @@ bind "scancode31"     "slot2"                                   // [2] Equip: Se
 bind "scancode32"     "slot3"                                   // [3] Equip: Knife, Zeus or Hands (dangerzone).
 bind "scancode33"     "slot4"                                   // [4] Equip: Grenades [cycle] (same as 'invnextgrenade').
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
-bind "scancode35"     say "𝐡𝐞𝐫 𝐁𝐨𝐃𝐘 𝐢𝐬 𝐁𝐫𝐨𝐚𝐃 𝐚𝐧𝐃 𝐩𝐨𝐖𝐞𝐫𝐅𝐮𝐥, 𝐁𝐮𝐢𝐥𝐭 𝐅𝐨𝐫 𝐞𝐧𝐃𝐮𝐫𝐚𝐧𝐂𝐞 𝐫𝐚𝐭𝐡𝐞𝐫 𝐭𝐡𝐚𝐧 𝐞𝐥𝐞𝐂𝐚𝐧𝐆𝐞, 𝐖𝐢𝐭𝐡 𝐭𝐡𝐢𝐧𝐤 𝐭𝐡𝐢𝐆𝐡𝐬, 𝐬𝐭𝐫𝐨𝐧𝐆 𝐚𝐫𝐦𝐬, 𝐚𝐧𝐃 𝐚 𝐖𝐢𝐃𝐞 𝐁𝐚𝐂𝐤 𝐂𝐚𝐩𝐚𝐛𝐥𝐞 𝐨𝐅 𝐁𝐞𝐚𝐫𝐢𝐧𝐆 𝐖𝐞𝐢𝐆𝐡𝐭." // [6] 
-bind "scancode36"     say "⟁ FÄTHR ⟁ MÖDHÄR ⟁ SISSLINDS ⟁ PALPH ⟁ TRIBÄ ⟁ PALAN ⟁ LÖYÄLTI ⟁ DETERMINÄTIÖN ⟁ RËGÄLITI ⟁ OSSËRVÅNCE ⟁ HONOR ⟁ WISDØM ⟁ DRALPHA ⟁" // [7] 
-bind "scancode37"     say "you r dmb u shud be on ur nees for daddy not play hig iq game like counter steirke 2" // [8]  
-bind "scancode38"     say "Glàssës enháncë my gàmeplày ànd zóóm ín whën Í hít yóu ín HD ànd gët ëásy wín fòr my fàmílý." // [9] 
-bind "scancode39"     say "𝖂𝖍𝖊𝖓 𝖞𝖔𝖚 𝖆𝖗𝖊 𝖔𝖓 𝖌𝖗𝖔𝖚𝖓𝖉 𝖍𝖆𝖛𝖎𝖓𝖌 𝖇𝖔𝖗𝖎𝖓𝖌 𝖎 𝖆𝖓 𝖎𝖓 𝖒𝖞 𝖌𝖔𝖑𝖉𝖊𝖓 𝖏𝖊𝖙 𝖜𝖎𝖙𝖍 𝖒𝖞 𝖇𝖆𝖓𝖉𝖘" // [0] 
-bind "scancode45"     say "𝘐 𝘢𝘮 𝘴𝘢𝘥 𝘵𝘰 𝘵𝘩𝘦 𝘵𝘰𝘶𝘤𝘩 𝘣𝘶𝘵𝘵 𝘮𝘺 𝘮𝘪𝘯𝘥 𝘪𝘴 𝘧𝘶𝘳𝘦𝘺𝘰𝘶𝘴 𝘭𝘪𝘬𝘦 𝘢 𝘵𝘺𝘨𝘦𝘳. 𝘺𝘰𝘶 𝘥𝘰𝘯𝘵 𝘮𝘦𝘴𝘴 𝘸𝘪𝘵𝘩 𝘵𝘩𝘦 𝘣𝘰$$ 𝘰𝘧 𝘵𝘩𝘦 𝘸𝘰𝘳𝘭𝘥" // [-] 
-bind "scancode47"     say "𝗦𝗶𝗻𝗴𝗹𝗲 𝗯𝗹𝗸 𝗺𝗮𝗻 𝗹𝗼𝗼𝗸𝗶𝗻𝗴 𝗳𝗼𝗿 𝗮 𝘀𝗶𝗻𝗴𝗹𝗲 𝗳𝗲𝗺𝗮𝗹𝗲 𝘄𝗵𝗼 𝗻𝗲𝗲𝗱 𝗼𝗿 𝗹𝗼𝗼𝗸𝗶𝗻𝗴 𝗳𝗼𝗿 𝘀𝘁𝗮𝗯𝗶𝗹𝗶𝘁𝘆 𝗶𝗻 𝘁𝗵𝗲𝗶𝗿 𝗹𝗶𝗳𝗲. 𝗠𝘂𝘀𝘁 𝗯𝗲 𝘄𝗶𝗹𝗹𝗶𝗻𝗴 𝘁𝗼 𝗯𝗲 𝗮 𝗹𝗶𝘃𝗲-𝗶𝗻 𝗳𝗲𝗺𝗮𝗹𝗲 𝘄𝗶𝘁𝗵𝗼𝘂𝘁 𝘁𝗵𝗲 𝗱𝗿𝗮𝗺𝗮. 𝗠𝘂𝘀𝘁 𝗯𝗲 𝗱𝗿𝘂𝗴 𝗳𝗿𝗲𝗲, 𝗵𝗼𝗻𝗲𝘀𝘁, 𝗰𝗮𝗿𝗶𝗻𝗴." // ([) 
+bind "scancode35"     say "Her body is broad and powerful, built for endurance rather than elegance, with thick thighs, strong arms, and a wide back capable of bearing weight." // [6] 
+bind "scancode36"     say "⟁FäÞHr ⟁ MöðhÄr ⟁ SïßLïnðs ⟁ PäK ⟁ TrïBä ⟁ K'LäN ⟁ LÖÝälTï ⟁ ÐëTërMïnäTïÖn ⟁ ŖëĞälïTÿ ⟁ ÕßšëŖvånĆë ⟁ HÕnõŖ ⟁ WïŠðom⟁ ÐRAKä" // [7] 
+bind "scancode37"     say "you are doomed like this boolet coming in high speed to you brain, INSANE IN THE BRAIN. I am chill." // [8]  
+bind "scancode38"     say "Glasses enhanse my gameplay and zoom in when i H$ you in HD and get easy win for my family" // [9] 
+bind "scancode39"     say "When you are on ground having boring i an in my golden jet with my bands" // [0] 
+bind "scancode45"     say "I am sad to the touch butt my mind is fureyous like a tyger. you dont mess with the bo$$ of the world" // [-] 
+bind "scancode47"     say "Single blk man looking for a single female who need or looking for stability in there life. Must be willing to be a live in female without the drama. Must be drug free, honest, caring." // ([) 
 bind "scancode48"     say "say she want a baby while she mastering my yoda" // (]) 
-bind "scancode56"     say "She wants a baby while she’s mastering my Yoda." // [/] 
-bind "scancode51"     say "【﻿ＥＸＣＥＬＬＥＮＴ　ＡＲＯＭＡ：：＋２００　ＢＲＯＷＮＩＥ　ＰＯＩＮＴＳ】" // [;] 
-bind "scancode52"     say "She’s planning for a baby while schooling my Yoda." // ['] 
-bind "scancode49"     say "ᴄᴏᴜɴᴛᴇʀ ᴛᴇʀʀᴏʀꜱᴛ ᴡɪɴ ? ᴛʀᴜᴇ ʜᴇʀᴇ ʙᴇᴀᴜꜱᴇ ʏᴏᴜ ᴄᴏᴜɴᴛʀʏ ɪꜱ ᴛᴇʀʀᴏʀɪꜱᴛ ʙᴜᴛ ᴍʏ ᴄᴏᴜɴʀᴛʏ ɪꜱ ʀɪᴄʜ ᴀɴᴅ ʏᴏᴜ ʟɪᴠᴇ ꜱʟᴜᴍꜱ" // [\] 
-bind "scancode6"      say "𝙼ⁱ𝚍𝚕𝚎 𝚎𝚊𝚜𝚝 ⁿ𝚎𝚎𝚍 𝚝𝚘 𝚕𝚎𝚊𝚛𝚗 𝚋𝚘𝚖𝚋 𝚍𝚎𝚏𝚞𝚜𝚞𝚊𝚕 𝚝𝚊𝚌𝚔𝚝ⁱ𝚔𝚜 𝚏𝚘𝚛 𝚌𝚘𝚞𝚗𝚝𝚎𝚛 𝚝𝚎𝚛𝚛𝚘ˢⁱ𝚝ˢ 𝚊ⁿ𝚍 𝚊𝚕𝚕 𝚌𝚘𝚞𝚗𝚝𝚛𝚢𝚎𝚜 𝚋𝚘𝚠 𝚍𝚘𝚠ⁿ 𝚝𝚘 𝚖𝚎 𝚕𝚎𝚋𝚊ⁿ𝚘ⁿ 𝚔ⁱ𝚗𝚐" // [c] 
-bind "scancode9"      say "𝙣𝙞𝙛𝙚𝙙 𝙮ơ𝙪 𝙇𝙞𝙠𝙚 𝙞 𝙿𝙚𝙚𝙠𝙮 𝙗𝙡𝙞𝙣𝙙𝙚𝙧𝙨, 𝙮ơ𝙪 𝙙𝙞𝙚 𝙇𝙞𝙠𝙚 𝙢ơ𝙝ą𝙢𝙢𝙚𝙙 𝙗ą𝙘𝙠 𝙞𝙣 𝙡𝙝𝙚 𝙙ąყʂ ῳ𝙝𝙚𝙣 𝙮ơ𝙪 𝙮ơ𝙪𝙣𝙜𝙚𝙧 𝙗𝙤𝙩" // [f] 
-bind "scancode29"     say "աɦɛռ ɨ աǟʟӄ ʊք ʟǟɖɖɛʀ ʏօʊ ʟօօӄ աɨȶɦ ʀɨʄɛʟ. ɨ ֆɦօօȶ ɮɛʄօʀ ǟռɖ ֆռɨքɛʀ ʏօʊ. ʏօʊ ǟʀɛ ռօա օռ ɢʀօʊռɖ աɨȶɦ ʄǟʍɨʟʏ (ɖօɢ)" // [z] 
-bind "scancode54"     say "ѕωєєт вαву мσтнєя σƒ туяσηє" // [,] 
-bind "scancode55"     say "CHINESE BACKWOOD HACK 英雄联盟 SECRET BLUNT TECHNIQUE 英雄联盟英雄联盟 ANCIENT KUSH KNOWLEDGE 英雄联盟 40 BLUNTS ROLLED IN 20 SECONDS" // [.] 
+bind "scancode56"     say "Other pepol are shooting aer. But me HS you. now all family disrespect but it fine because the world what it is!" // [/] 
+bind "scancode51"     say "You life go like you mother own you him mother own him then i own him as my slave because i buyed it all then kill alll" // [;] 
+bind "scancode51"     say "EXCELLENT AROMA::+200 BROWNIE POINTS" // [;] 
+bind "scancode52"     say "Blood pores from top of DE_MIRAGE but police wonrder who blood is? it you blood i explode you with shootgun" // ['] 
+bind "scancode49"     say "Counter terrorst win ? true here beavuse you country is terrorist but my counrty is rich and you live slums" // [\] 
+bind "scancode6"      say "Midle east need to learn bomb defusual tacktiks for counter terrosits and all countryes bow down to me lebanon king" // [c] 
+bind "scancode9"      say "Nifed you like i peeky blinders, you die like mohammed back in the days when you younger bot" // [f] 
+bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family (DOG)" // [z] 
+bind "scancode54"     say "Bullot come, bullet go, i stay owning. Hs Here Hs There you are not here." // [,] 
+bind "scancode55"     say "Thanks allah for him making Me HS you, JOKE i always kill...." // [.] 
 bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v] 
-bind "scancode17"     say "Brakedanceing and assplay bRAKEDANCEING AND ASSPLAY break adncing in asspay brekdacneing in ass pay" // [n] 
+bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor." // [n] 
 bind "scancode18"     say "If you would just get up and teach them instead of handing them a friggin packet, yo. There’s kids in here that don’t learn like that. They need to learn face to face." // [o] 
-bind "scancode19"     say "ɎØɄ ⱠɄ₵₭ɎɆⱤ ₮Ⱨ₳₮ ₩ⱧɆ₦ ł Ⱨ₴ ł ₩ØɄⱠĐ ₦ł₣Ɇ ɎØɄ ł₦ ฿₳₵₭₴₮₳฿" // [p] 
-bind "scancode20"     say "𝗟𝗲𝘁 𝗬𝗼𝘂 𝗽𝗮𝗿𝗲𝗻𝘁𝘀 𝗸𝗻𝗼𝘄 𝗬𝗼𝘂 𝗗𝘆𝗲 𝗮𝗳𝘁𝗲𝗿 𝘁𝗵𝗶𝘀 𝗹𝗼𝘇𝗲" // [q] 
-bind "scancode20"     say "(っ◔◡◔)っ ♥ ct sided map nigga you get youll turns ♥" // [q] 
-bind "scancode15"     say "𝕕𝕠𝕘 𝟛𝕣𝕕 𝕨𝕠𝕣𝕝𝕕𝕖𝕣𝕤 𝕤𝕖𝕟𝕥 𝕓𝕒𝕔𝕜 𝕥𝕠 𝕤𝕝𝕦𝕞 𝕓𝕪 𝕗𝕚𝕣𝕤𝕥 𝕨𝕠𝕣𝕝𝕕 𝕘𝕠𝕕 𝕓𝕪 𝕥𝕙𝕚𝕤 ℍ𝕊" // [l] 
-bind "scancode12"     say "†hê ßrðw§êr hå§ ¥ðµ þå§§wðrÐ §åvê. Ì gê† ¥ðµ þå§wðrÐ †ð µ§ê ðñ å¢¢ðµñ† åñÐ måkê åll ¥ðµ lï††lê mðñê¥ †ð m¥ å¢¢ðµñ†?" // [i] 
-bind "scancode13"     say "ⓖⓔⓣ ⓖⓤⓦⓦⓦⓦⓦⓦⓦⓦⓓⓓⓓⓓⓓⓓⓓⓓⓓⓓⓓⓓⒹⒹⒹⒹⒹⒹⒹⒹⒹⒹⒹⒹⒹⒹⒹⒹⒹⒹⒹ" // [j] 
+bind "scancode19"     say "You luckyer that when i hs i would nife you in backstab" // [p] 
+bind "scancode20"     say "Let you parents know you dye after this loze" // [q] 
+bind "scancode15"     say "dog 3rd worlders sent back to slum by first world god by this HS" // [l] 
+bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
+bind "scancode13"     say "Typikal bottys need to eat food when you play. but cant help me because i play evryday i have slave to eat for me and that slave you bot." // [j] 
 bind "scancode14"     say "I Own develepor this game and you only beg from forgive from me because i have give all hs for free" // [k] 
-bind "scancode13"     say "" // [j] 
-bind "scancode16"     say "" // [m] 
+bind "scancode20"     "invnext" // [q] Next Weapon
 bind "scancode8"      "+use-beep" // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
 bind "scancode27"     "+lookatweapon" // [x] Inspect or lower tablet (dangerzone).
 bind "scancode10"     "drop" // [g] Drop weapon.
@@ -83,6 +82,8 @@ bind "scancode80"     "+turnleft" // [leftarrow] Rotate to left (counter-clockwi
 bind "scancode79"     "+turnright" // [rightarrow] Rotate to right (clockwise).
 
 // Comms and UI
+bind "scancode13"     "callvote" // [j] Vote menu.
+bind "scancode16"     "teammenu" // [m] Open the team selection menu and the tablet (dangerzone).
 bind "scancode24"     "messagemode2" // [y] Team message (chat only with the team).
 bind "scancode28"     "messagemode" // [u] Message to all (chat with all).
 bind "scancode5"      "buymenu" // [b] Buy menu/Tablet delivery (dangerzone)
