--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -32,7 +32,7 @@ bind "scancode45"     say "I am sad to the touch butt my mind is fureyous like a
 bind "scancode47"     say "Single blk man looking for a single female who need or looking for stability in there life. Must be willing to be a live in female without the drama. Must be drug free, honest, caring." // ([) 
 bind "scancode48"     say "say she want a baby while she mastering my yoda" // (]) 
 bind "scancode56"     say "Other pepol are shooting aer. But me HS you. now all family disrespect but it fine because the world what it is!" // [/] 
-bind "scancode51"     say "You life go like you mother own you him mother own him then i own him as my slave because i buyed it all then kill alll" // [;] 
+bind "scancode51"     say "I buy a ５$ 𝐚𝐜𝐜𝐨𝐮𝐧𝐭 with 𝙡𝙤𝙡𝙯𝙩𝙚𝙖𝙢 ♛ again , log in, inject 𝚙𝚛𝚒𝚖𝚘𝚛𝚍𝚒𝚊𝚕.𝚍𝚎𝚟, load 𝘴𝘭𝘰𝘵 5 and start searching 🅜🅜, the game is 𝒻𝑜𝓊𝓃𝒹, I start to kill 𝕔𝕝𝕖𝕒𝕟𝕤 and get a １４ ｄａｙｓ 🄶🅁🄸🄴🄵 🄱🄰🄽" // [;] 
 bind "scancode51"     say "EXCELLENT AROMA::+200 BROWNIE POINTS" // [;] 
 bind "scancode52"     say "Blood pores from top of DE_MIRAGE but police wonrder who blood is? it you blood i explode you with shootgun" // ['] 
 bind "scancode49"     say "Counter terrorst win ? true here beavuse you country is terrorist but my counrty is rich and you live slums" // [\] 
@@ -50,6 +50,8 @@ bind "scancode15"     say "dog 3rd worlders sent back to slum by first world god
 bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
 bind "scancode13"     say "Typikal bottys need to eat food when you play. but cant help me because i play evryday i have slave to eat for me and that slave you bot." // [j] 
 bind "scancode14"     say "I Own develepor this game and you only beg from forgive from me because i have give all hs for free" // [k] 
+bind "scancode13"     say "𝕀𝔽 𝕀 𝕆ℙ𝔼ℕ 𝕊ℙ𝕀ℕ𝔹𝕆𝕋 𝔸𝕃𝕃 𝔻𝕆𝔾𝕊 𝔻𝕀𝔼" // [j]
+bind "scancode16"     say "𝕀 𝕕𝕠𝕟𝕥 𝕡𝕝𝕒𝕪 𝕥𝕙𝕖 𝕘𝕒𝕞𝕖, 𝕀 𝕣𝕖𝕨𝕣𝕚𝕥𝕖 𝕚𝕥 | inject → 𝒑𝒓𝒊𝒎𝒐𝒓𝒅𝒊𝒂𝒍.𝒅𝒆𝒗 | hook → 🅂🄴🄽🅂🄴 | ban wave? I surf 🄾🄽 🄸🅃" // [m]
 bind "scancode20"     "invnext" // [q] Next Weapon
 bind "scancode8"      "+use-beep" // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
 bind "scancode27"     "+lookatweapon" // [x] Inspect or lower tablet (dangerzone).
@@ -82,8 +84,6 @@ bind "scancode80"     "+turnleft" // [leftarrow] Rotate to left (counter-clockwi
 bind "scancode79"     "+turnright" // [rightarrow] Rotate to right (clockwise).
 
 // Comms and UI
-bind "scancode13"     "callvote" // [j] Vote menu.
-bind "scancode16"     "teammenu" // [m] Open the team selection menu and the tablet (dangerzone).
 bind "scancode24"     "messagemode2" // [y] Team message (chat only with the team).
 bind "scancode28"     "messagemode" // [u] Message to all (chat with all).
 bind "scancode5"      "buymenu" // [b] Buy menu/Tablet delivery (dangerzone)
