--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -50,8 +50,8 @@ bind "scancode15"     say "dog 3rd worlders sent back to slum by first world god
 bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
 bind "scancode13"     say "Typikal bottys need to eat food when you play. but cant help me because i play evryday i have slave to eat for me and that slave you bot." // [j] 
 bind "scancode14"     say "I Own develepor this game and you only beg from forgive from me because i have give all hs for free" // [k] 
-bind "scancode13"     say "𝕀𝔽 𝕀 𝕆ℙ𝔼ℕ 𝕊ℙ𝕀ℕ𝔹𝕆𝕋 𝔸𝕃𝕃 𝔻𝕆𝔾𝕊 𝔻𝕀𝔼" // [j]
 bind "scancode16"     say "𝕀 𝕕𝕠𝕟𝕥 𝕡𝕝𝕒𝕪 𝕥𝕙𝕖 𝕘𝕒𝕞𝕖, 𝕀 𝕣𝕖𝕨𝕣𝕚𝕥𝕖 𝕚𝕥 | inject → 𝒑𝒓𝒊𝒎𝒐𝒓𝒅𝒊𝒂𝒍.𝒅𝒆𝒗 | hook → 🅂🄴🄽🅂🄴 | ban wave? I surf 🄾🄽 🄸🅃" // [m]
+bind "scancode230"    say "𝕀𝔽 𝕀 𝕆ℙ𝔼ℕ 𝕊ℙ𝕀ℕ𝔹𝕆𝕋 𝔸𝕃𝕃 𝔻𝕆𝔾𝕊 𝔻𝕀𝔼" // [ralt] 
 bind "scancode20"     "invnext" // [q] Next Weapon
 bind "scancode8"      "+use-beep" // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
 bind "scancode27"     "+lookatweapon" // [x] Inspect or lower tablet (dangerzone).
@@ -108,7 +108,6 @@ bind "scancode228"    "" // [rctrl]
 bind "scancode40"     "" // [enter] 
 bind "scancode42"     "" // [backspace] 
 bind "scancode73"     "" // [ins] 
-bind "scancode230"    "" // [ralt] 
 bind "scancode46"     "" // [backspace] 
 bind "scancode58"     "" // [f1] 
 bind "scancode59"     "" // [f2] 
