--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -39,19 +39,24 @@ bind "scancode49"     say "Counter terrorst win ? true here beavuse you country 
 bind "scancode6"      say "Midle east need to learn bomb defusual tacktiks for counter terrosits and all countryes bow down to me lebanon king" // [c] 
 bind "scancode9"      say "Nifed you like i peeky blinders, you die like mohammed back in the days when you younger bot" // [f] 
 bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family (DOG)" // [z] 
-bind "scancode54"     say "Bullot come, bullet go, i stay owning. Hs Here Hs There you are not here." // [,] 
+bind "scancode54"     say "ct sided map nigga you get youll turns" // [,] 
 bind "scancode55"     say "Thanks allah for him making Me HS you, JOKE i always kill...." // [.] 
 bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v] 
 bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor." // [n] 
 bind "scancode18"     say "If you would just get up and teach them instead of handing them a friggin packet, yo. There’s kids in here that don’t learn like that. They need to learn face to face." // [o] 
 bind "scancode19"     say "You luckyer that when i hs i would nife you in backstab" // [p] 
-bind "scancode20"     say "Let you parents know you dye after this loze" // [q] 
-bind "scancode15"     say "dog 3rd worlders sent back to slum by first world god by this HS" // [l] 
+bind "scancode20"     say "Let you parents know you dye after this loze this loze you are a dmb retad you belong on knees 4  dad not playing iq 999 game like coutner striek 2" // [q] 
+bind "scancode15"     say "dog 3rd worlders sent back to slum by first world god by this HS... get guwwwwwwwwddddddddddddDDDDDDDDDDDDDDDDDDD" // [l] 
 bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
 bind "scancode13"     say "Typikal bottys need to eat food when you play. but cant help me because i play evryday i have slave to eat for me and that slave you bot." // [j] 
-bind "scancode14"     say "I Own develepor this game and you only beg from forgive from me because i have give all hs for free" // [k] 
+bind "scancode14"     say "Let you parents know you dye after this loze SWEET BABY MOTHER OF TYRONE" // [k] 
 bind "scancode16"     say "𝕀 𝕕𝕠𝕟𝕥 𝕡𝕝𝕒𝕪 𝕥𝕙𝕖 𝕘𝕒𝕞𝕖, 𝕀 𝕣𝕖𝕨𝕣𝕚𝕥𝕖 𝕚𝕥 | inject → 𝒑𝒓𝒊𝒎𝒐𝒓𝒅𝒊𝒂𝒍.𝒅𝒆𝒗 | hook → 🅂🄴🄽🅂🄴 | ban wave? I surf 🄾🄽 🄸🅃" // [m]
 bind "scancode230"    say "𝕀𝔽 𝕀 𝕆ℙ𝔼ℕ 𝕊ℙ𝕀ℕ𝔹𝕆𝕋 𝔸𝕃𝕃 𝔻𝕆𝔾𝕊 𝔻𝕀𝔼" // [ralt] 
+bind "scancode73"     say "CHINESE BACKWOOD HACK 英雄联盟 SECRET BLUNT TECHNIQUE 英雄联盟英雄联盟 ANCIENT KUSH KNOWLEDGE 英雄联盟 40 BLUNTS ROLLED IN 20 SECONDS" // [ins] 
+bind "scancode57"     say "SIR YES SIR OORAHHH !!!" // [capslock] 
+bind "scancode229"    say "you big mad nigga" // [rshift]
+bind "scancode224"    say "why you so mad lmfao" // [ctrl] 
+bind "scancode228"    say "so pressed for no reason lmfao" // [rctrl] 
 bind "scancode20"     "invnext" // [q] Next Weapon
 bind "scancode8"      "+use-beep" // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
 bind "scancode27"     "+lookatweapon" // [x] Inspect or lower tablet (dangerzone).
@@ -101,13 +106,8 @@ bind "scancode75"     "" // [pgup]
 bind "scancode78"     "" // [pgdn] 
 bind "scancode71"     "" // [sclk] 
 bind "scancode72"     "" // [pause] 
-bind "scancode57"     "" // [capslock] 
-bind "scancode229"    "" // [rshift]
-bind "scancode224"    "" // [ctrl] 
-bind "scancode228"    "" // [rctrl] 
 bind "scancode40"     "" // [enter] 
 bind "scancode42"     "" // [backspace] 
-bind "scancode73"     "" // [ins] 
 bind "scancode46"     "" // [backspace] 
 bind "scancode58"     "" // [f1] 
 bind "scancode59"     "" // [f2] 
