--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -45,18 +45,18 @@ bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v]
 bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor." // [n] 
 bind "scancode18"     say "If you would just get up and teach them instead of handing them a friggin packet, yo. There’s kids in here that don’t learn like that. They need to learn face to face." // [o] 
 bind "scancode19"     say "You luckyer that when i hs i would nife you in backstab" // [p] 
-bind "scancode20"     say "Let you parents know you dye after this loze this loze you are a dmb retad you belong on knees 4  dad not playing iq 999 game like coutner striek 2" // [q] 
+bind "scancode20"     say "Let you parents know you dye after this loze you are a dmb retad you belong on knees 4  dad not playing iq 999 game like coutner striek 2" // [q] 
 bind "scancode15"     say "dog 3rd worlders sent back to slum by first world god by this HS... get guwwwwwwwwddddddddddddDDDDDDDDDDDDDDDDDDD" // [l] 
 bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
 bind "scancode13"     say "Typikal bottys need to eat food when you play. but cant help me because i play evryday i have slave to eat for me and that slave you bot." // [j] 
-bind "scancode14"     say "Let you parents know you dye after this loze SWEET BABY MOTHER OF TYRONE" // [k] 
+bind "scancode14"     say "u will 𝕣𝕖𝕘𝕣𝕖𝕥 rage vs me when i go on ｌｏｌｚ．ｇｕｒｕ acc." // [k] 
 bind "scancode16"     say "𝕀 𝕕𝕠𝕟𝕥 𝕡𝕝𝕒𝕪 𝕥𝕙𝕖 𝕘𝕒𝕞𝕖, 𝕀 𝕣𝕖𝕨𝕣𝕚𝕥𝕖 𝕚𝕥 | inject → 𝒑𝒓𝒊𝒎𝒐𝒓𝒅𝒊𝒂𝒍.𝒅𝒆𝒗 | hook → 🅂🄴🄽🅂🄴 | ban wave? I surf 🄾🄽 🄸🅃" // [m]
 bind "scancode230"    say "𝕀𝔽 𝕀 𝕆ℙ𝔼ℕ 𝕊ℙ𝕀ℕ𝔹𝕆𝕋 𝔸𝕃𝕃 𝔻𝕆𝔾𝕊 𝔻𝕀𝔼" // [ralt] 
 bind "scancode73"     say "CHINESE BACKWOOD HACK 英雄联盟 SECRET BLUNT TECHNIQUE 英雄联盟英雄联盟 ANCIENT KUSH KNOWLEDGE 英雄联盟 40 BLUNTS ROLLED IN 20 SECONDS" // [ins] 
 bind "scancode57"     say "SIR YES SIR OORAHHH !!!" // [capslock] 
 bind "scancode229"    say "you big mad nigga" // [rshift]
-bind "scancode224"    say "why you so mad lmfao" // [ctrl] 
-bind "scancode228"    say "so pressed for no reason lmfao" // [rctrl] 
+bind "scancode224"    say "𝕕𝕦𝕞𝕓 𝕕𝕠𝕘, 𝕪𝕠𝕦 𝕒𝕨𝕒𝕜𝕖 𝕥𝕙𝕖 ᴅʀᴀɢᴏɴ ʜᴠʜ ᴍᴀᴄʜɪɴᴇ, 𝕟𝕠𝕨 𝕪𝕠𝕦 𝕝𝕠𝕤𝕖 𝙖𝙘𝙘 𝕒𝕟𝕕 𝚐𝚊𝚖𝚎 ♕" // [ctrl] 
+bind "scancode228"    say "𝕞𝕪 𝕙𝕧𝕙 𝕥𝕖𝕒𝕞 𝕚𝕤 𝕣𝕖𝕒𝕕𝕪 𝕘𝕠 𝟙𝕩𝟙 𝟚𝕩𝟚 𝟛𝕩𝟛 𝟜𝕩𝟜 𝟝𝕩𝟝 (◣◢)" // [rctrl] 
 bind "scancode20"     "invnext" // [q] Next Weapon
 bind "scancode8"      "+use-beep" // [e] Use with a beep sound (ex. open doors, pick up weapons, plant bomb etc.).
 bind "scancode27"     "+lookatweapon" // [x] Inspect or lower tablet (dangerzone).
