--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -46,7 +46,7 @@ bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefati
 bind "scancode18"     say "If you would just get up and teach them instead of handing them a friggin packet, yo. There’s kids in here that don’t learn like that. They need to learn face to face." // [o] 
 bind "scancode19"     say "You luckyer that when i hs i would nife you in backstab" // [p] 
 bind "scancode20"     say "Let you parents know you dye after this loze you are a dmb retad you belong on knees 4  dad not playing iq 999 game like coutner striek 2" // [q] 
-bind "scancode15"     say "dog 3rd worlders sent back to slum by first world god by this HS... get guwwwwwwwwddddddddddddDDDDDDDDDDDDDDDDDDD" // [l] 
+bind "scancode15"     say "HOW YOU GONNA EAT FRIED CHICKEN WITH NO SODA MAN?" // [l] 
 bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
 bind "scancode13"     say "Typikal bottys need to eat food when you play. but cant help me because i play evryday i have slave to eat for me and that slave you bot." // [j] 
 bind "scancode14"     say "u will 𝕣𝕖𝕘𝕣𝕖𝕥 rage vs me when i go on ｌｏｌｚ．ｇｕｒｕ acc." // [k] 
