--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -50,7 +50,7 @@ bind "scancode15"     say "HOW YOU GONNA EAT FRIED CHICKEN WITH NO SODA MAN?" //
 bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
 bind "scancode13"     say "Typikal bottys need to eat food when you play. but cant help me because i play evryday i have slave to eat for me and that slave you bot." // [j] 
 bind "scancode14"     say "u will 𝕣𝕖𝕘𝕣𝕖𝕥 rage vs me when i go on ｌｏｌｚ．ｇｕｒｕ acc." // [k] 
-bind "scancode16"     say "𝕀 𝕕𝕠𝕟𝕥 𝕡𝕝𝕒𝕪 𝕥𝕙𝕖 𝕘𝕒𝕞𝕖, 𝕀 𝕣𝕖𝕨𝕣𝕚𝕥𝕖 𝕚𝕥 | inject → 𝒑𝒓𝒊𝒎𝒐𝒓𝒅𝒊𝒂𝒍.𝒅𝒆𝒗 | ban wave? I surf 🄾🄽 🄸🅃" // [m]
+bind "scancode16"     say "little poopy dick from wiping forwards afta u shyt" // [m]
 bind "scancode230"    say "𝕀𝔽 𝕀 𝕆ℙ𝔼ℕ 𝕊ℙ𝕀ℕ𝔹𝕆𝕋 𝔸𝕃𝕃 𝔻𝕆𝔾𝕊 𝔻𝕀𝔼" // [ralt] 
 bind "scancode73"     say "CHINESE BACKWOOD HACK 英雄联盟 SECRET BLUNT TECHNIQUE 英雄联盟英雄联盟 ANCIENT KUSH KNOWLEDGE 英雄联盟 40 BLUNTS ROLLED IN 20 SECONDS" // [ins] 
 bind "scancode57"     say "SIR YES SIR OORAHHH !!!" // [capslock] 
