--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -24,7 +24,7 @@ bind "scancode32"     "slot3"                                   // [3] Equip: Kn
 bind "scancode33"     "slot4"                                   // [4] Equip: Grenades [cycle] (same as 'invnextgrenade').
 bind "scancode34"     "slot5"                                   // [5] Equip: C4 Explosive or Medi-Shot.
 bind "scancode35"     say "Her body is broad and powerful, built for endurance rather than elegance, with thick thighs, strong arms, and a wide back capable of bearing weight." // [6] 
-bind "scancode36"     say "⟁FäÞHr ⟁ MöðhÄr ⟁ SïßLïnðs ⟁ PäK ⟁ TrïBä ⟁ K'LäN ⟁ LÖÝälTï ⟁ ÐëTërMïnäTïÖn ⟁ ŖëĞälïTÿ ⟁ ÕßšëŖvånĆë ⟁ HÕnõŖ ⟁ WïŠðom⟁ ÐRAKä" // [7] 
+bind "scancode36"     say "𝕚𝕕𝕚𝕠𝕥 𝕒𝕝𝕨𝕒𝕪𝕤 𝕒𝕤𝕜 𝕞𝕖, 𝕦𝕚𝕕? 𝕒𝕟𝕕 𝕚𝕞 𝕕𝕠𝕟𝕥 𝕒𝕟𝕤𝕨𝕖𝕣, 𝕚 𝕝𝕖𝕥 𝕥𝕙𝕖 𝕤𝕔𝕠𝕣𝕖𝕓𝕠𝕒𝕣𝕕 𝕥𝕒𝕝𝕜 ♛" // [7] 
 bind "scancode37"     say "you are doomed like this boolet coming in high speed to you brain, INSANE IN THE BRAIN. I am chill." // [8]  
 bind "scancode38"     say "Glasses enhanse my gameplay and zoom in when i H$ you in HD and get easy win for my family" // [9] 
 bind "scancode39"     say "When you are on ground having boring i an in my golden jet with my bands" // [0] 
