--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -39,7 +39,7 @@ bind "scancode49"     say "Counter terrorst win ? true here beavuse you country 
 bind "scancode6"      say "Midle east need to learn bomb defusual tacktiks for counter terrosits and all countryes bow down to me lebanon king" // [c] 
 bind "scancode9"      say "Nifed you like i peeky blinders, you die like mohammed back in the days when you younger bot" // [f] 
 bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family (DOG)" // [z] 
-bind "scancode54"     say "ct sided map nigga you get youll turns" // [,] 
+bind "scancode54"     say "get on the ground and suck my horney or imma gonna get angry" // [,] 
 bind "scancode55"     say "Thanks allah for him making Me HS you, JOKE i always kill...." // [.] 
 bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v] 
 bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor." // [n] 
